--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="web-studio" content="Web Studio" />
     <title lang="en">Web Studio</title>
-    <link rel="stylesheet" href="./css/reset.css" />
+    <!--<link rel="stylesheet" href="./css/reset.css" />-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
