--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
     <header>
       <nav>
-        <a lang="en" href="https://punkrusheva.github.io/goit-markup-hw-01/">
-          Web Studio
+        <a lang="en" href="./index.html" class="logo">
+          <!--https://punkrusheva.github.io/goit-markup-hw-01/">-->
+          <span class="logo-blue">Web</span>
+          <span class="logo-black">Studio</span>
         </a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -203,11 +205,12 @@
 
     <footer>
       <address>
-        <p lang="en">Web Studio</p>
+        <span class="logo-blue">Web</span>
+        <span class="logo-black">Studio</span>
         <ul>
           <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>info@devstudio.com</li>
+          <li>+38 096 111 11 11</li>
         </ul>
       </address>
       <section>
