--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
     <header>
       <nav>
         <a lang="en" href="./index.html" class="logo">
-          <!--https://punkrusheva.github.io/goit-markup-hw-01/">-->
           <span class="logo-blue">Web</span>
           <span class="logo-black">Studio</span>
         </a>
-        <ul>
+        <ul class="site-nav">
           <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address-header">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -36,12 +35,12 @@
 
     <main>
       <div>
-        <section>
+        <section class="hero">
           <h1>Эффективные решения для вашего бизнеса</h1>
           <a href="">Заказать услугу</a>
         </section>
       </div>
-      <section>
+      <section class="advantages">
         <h2>Наши приимущества</h2>
         <ul>
           <li>
@@ -90,7 +89,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="directions">
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -119,7 +118,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -168,7 +167,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="customers">
         <h2>Постоянные клиенты</h2>
         <ul lang="en">
           <li>
@@ -204,16 +203,16 @@
     <!--  Footer   -->
 
     <footer>
-      <address>
-        <span class="logo-blue">Web</span>
-        <span class="logo-black">Studio</span>
+      <span class="logo-blue">Web</span>
+      <span class="logo-black">Studio</span>
+      <address class="address-footer">
         <ul>
           <li>г. Киев, пр-т Леси Украинки, 26</li>
           <li>info@devstudio.com</li>
           <li>+38 096 111 11 11</li>
         </ul>
       </address>
-      <section>
+      <section class="social">
         <b>Присоединяйтесь</b>
         <ul lang="en">
           <li><a href="">Instagram</a></li>
@@ -222,7 +221,7 @@
           <li><a href="">Linkedin</a></li>
         </ul>
       </section>
-      <section>
+      <section class="subscribe">
         <b>Подпишитесь на рассылку</b>
         <form>
           <input type="text" name="e-mail" value="E-mail" />
