--- a/portfolio.html
+++ b/portfolio.html
@@ -12,30 +12,30 @@
     <!--  Header   -->
 
     <header>
-      <nav>
-        <a lang="en" href="./index.html" class="logo"> <!--https://punkrusheva.github.io/goit-markup-hw-01/">-->
-        <span class="logo-blue">Web</span>
-        <span class="logo-black">Studio</span>
-        </a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+        <nav>
+            <a lang="en" href="./index.html" class="logo">
+                <span class="logo-blue">Web</span>
+                <span class="logo-black">Studio</span>
+            </a>
+            <ul class="site-nav">
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul class="address-header">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
     </header>
   </body>
 </html>
 <!--  Main   -->
 
 <main>
-    <nav>
+    <nav class="sorting-nav">
         <ul>
             <li><a href="">Все</a></li>
             <li><a href="">Веб-сайты</a></li>
@@ -44,7 +44,7 @@
             <li><a href="">Маркетинг</a></li>
         </ul>
     </nav>
-    <section>
+    <section class="portfolio">
         <h1>Портфолио</h1>
           <ul>
             <li>
@@ -118,16 +118,16 @@
 <!--  Footer   -->
 
 <footer>
-    <address>
-        <span class="logo-blue">Web</span>
-        <span class="logo-black">Studio</span>
+    <span class="logo-blue">Web</span>
+    <span class="logo-black">Studio</span>
+    <address class="address-footer">
         <ul>
             <li>г. Киев, пр-т Леси Украинки, 26</li>
             <li>info@devstudio.com</li>
             <li>+38 096 111 11 11</li>
         </ul>
     </address>
-    <section>
+    <section class="social">
         <b>Присоединяйтесь</b>
         <ul lang="en">
             <li><a href="">Instagram</a></li>
@@ -136,7 +136,7 @@
             <li><a href="">Linkedin</a></li>
         </ul>
     </section>
-    <section>
+    <section class="subscribe">
         <b>Подпишитесь на рассылку</b>
         <form>
             <input type="text" name="e-mail" value="E-mail" />
