--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta name="web-studio" content="Web Studio" />
     <title lang="en">Web Studio</title>
-    <!--<link rel="stylesheet" href="./css/reset.css" />-->
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
